# eurojackpot

./: README.md  about.html  blog-post-1.html  blog.html  blueprint.md  clean_main_js.py  contact.html  index.html  info.html  loading.html  loading_original.html  main.js  privacy.html  pyproject.toml  remove_translations.py  result.html  sitemap.xml  style.css  temp_main.js  terms.html  treasure.js
public/data/: eurojackpot_context_dataset.json  translations.json
scripts/: build_eurojackpot_context_dataset.py  build_eurojackpot_context_dataset_v1.py
